Main containers added.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
       </nav>
     </header>
 
+    <div class = "container" id = "main_container">
+      <div class = "container" id = "mission">
+      </div>
+
+      <div class = "container" id = "tea_of_the_month">
+      </div>
+
+      <div class = "container" id = "locations">
+      </div>
+    </div>
+
   </body>
 </html>
