Tea of month section added.

--- a/index.html
+++ b/index.html
@@ -14,17 +14,53 @@
 
       <!-- Header Navigation Area -->
       <nav>
-        <span><a href= "#">Mission</a></span>
-        <span><a href= "#">Featured Tea</a></span>
+        <span><a href= "#mission">Mission</a></span>
+        <span><a href= "#tea_of_the_month">Featured Tea</a></span>
         <span><a href= "#" >Locations</a></span>
       </nav>
     </header>
 
     <div class = "container" id = "main_container">
       <div class = "container" id = "mission">
+        <div id = "mission_text">
+          <h2>Our Mission</h2>
+          <br>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
       </div>
 
       <div class = "container" id = "tea_of_the_month">
+        <div id = "tea_of_the_month_text">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+        </div>
+
+        <div class = "container" id = "pictures">
+          <div class = "element">
+            <img src = "./resources/images/BerryBlitz.jpg"/>
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+
+          <div class = "element">
+            <img src = "./resources/images/SpicedRum.jpg"/>
+            <h4>Spiced Rum Tea</h4>
+          </div>
+
+          <div class = "element">
+            <img src = "./resources/images/Donut.jpg"/>
+            <h4>Seasonal Donuts</h4>
+          </div>
+
+          <div class = "element">
+            <img src = "./resources/images/MyrtleAve.jpg"/>
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+
+          <div class = "element">
+            <img src = "./resources/images/BedfordBizzare.jpg"/>
+            <h4>Bedford Bizzare Tea</h4>
+          </div>
+        </div>
       </div>
 
       <div class = "container" id = "locations">
