Locations section added.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <span><a href= "#mission">Mission</a></span>
         <span><a href= "#tea_of_the_month">Featured Tea</a></span>
-        <span><a href= "#" >Locations</a></span>
+        <span><a href= "#locations" >Locations</a></span>
       </nav>
     </header>
 
@@ -63,7 +63,37 @@
         </div>
       </div>
 
-      <div class = "container" id = "locations">
+      <div id = "location_container">
+        <h2>Locations</h2>
+
+        <div class = "container" id = "locations">
+          <div class = "container element">
+            <h3>Downtown</h3>
+            <h4>384 West 4th St</h4>
+            <h4>Suite 108</h4>
+            <h4>Portland, Maine</h4>
+          </div>
+
+          <div class = "container element">
+            <h3>East Bayside</h3>
+            <h4>3433 Phisherman's Avenue</h4>
+            <h4>(Northwest Corner)</h4>
+            <h4>Portland, Maine</h4>
+          </div>
+
+          <div class = "container element">
+            <h3>Oakdale</h3>
+            <h4>515 Crescent Avenue</h4>
+            <h4>Second Floor</h4>
+            <h4>Portland, Maine</h4>
+          </div>
+        </div>
+      </div>
+
+      <div id = "contact_information">
+        <h2>The Tea Cozy</h2>
+        <h5>contact@theteacozy.com</h5>
+        <h5>917-555-8904</h5>
       </div>
     </div>
 
