Finished contact information and copyright sections.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <span><a href= "#mission">Mission</a></span>
         <span><a href= "#tea_of_the_month">Featured Tea</a></span>
-        <span><a href= "#locations" >Locations</a></span>
+        <span><a href= "#location_container" >Locations</a></span>
       </nav>
     </header>
 
@@ -90,12 +90,16 @@
         </div>
       </div>
 
-      <div id = "contact_information">
+      <div class = "container" id = "contact_information">
         <h2>The Tea Cozy</h2>
         <h5>contact@theteacozy.com</h5>
         <h5>917-555-8904</h5>
       </div>
     </div>
+
+    <footer>
+      <h5>&copy copyright The Tea Cozy 2017</h5>
+    </footer>
 
   </body>
 </html>
