Revised code for clarity.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     </header>
 
     <div class = "container" id = "main_container">
+
+      <!-- Mission Section -->
       <div class = "container" id = "mission">
         <div id = "mission_text">
           <h2>Our Mission</h2>
@@ -29,6 +31,7 @@
         </div>
       </div>
 
+      <!-- Tea of the Month Section -->
       <div class = "container" id = "tea_of_the_month">
         <div id = "tea_of_the_month_text">
           <h2>Tea of the Month</h2>
@@ -63,6 +66,7 @@
         </div>
       </div>
 
+      <!-- Locations Section -->
       <div id = "location_container">
         <h2>Locations</h2>
 
@@ -90,6 +94,7 @@
         </div>
       </div>
 
+      <!-- Contact Information Section -->
       <div class = "container" id = "contact_information">
         <h2>The Tea Cozy</h2>
         <h5>contact@theteacozy.com</h5>
@@ -97,6 +102,7 @@
       </div>
     </div>
 
+    <!-- Footer Section -->
     <footer>
       <h5>&copy copyright The Tea Cozy 2017</h5>
     </footer>
